Camino only - Bug 384791: Simplify the WebFeatures pref pane. Also disable Enable Java when plugins are disabled (bug 368937) and rename the pref pane class for the post-Chimera age (bug 356204). r=alqahira sr=mento